{
    "name": "KeyboardControls",
    "maps": [
        {
            "name": "Keyboard",
            "id": "cc5b18c0-ec84-4577-9d5e-bb05f5b6d2f2",
            "actions": [
                {
                    "name": "IncreaseTileType",
                    "type": "PassThrough",
                    "id": "55129892-56bc-4f62-95b9-775e071cc37e",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseTileType",
                    "type": "Button",
                    "id": "e7bbb8f9-aa7c-468d-a61a-cccf3763a3a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseLayer",
                    "type": "Button",
                    "id": "bded19ba-5641-4a9c-9dd0-1f84c6ab93b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DecreaseLayer",
                    "type": "Button",
                    "id": "e612cda1-8720-415d-aafe-f0ae37aef02c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b4caf36-28ea-469e-9fab-7d344ff01515",
                    "path": "<Keyboard>/#(0)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseTileType",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5523a06b-fcd2-4a55-a15d-2dd0ae5eed85",
                    "path": "<Keyboard>/#(9)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseTileType",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "050391ab-54e5-4d83-839f-91c2f36cbb01",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseLayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ecea450-9b55-49e8-93e3-f5ab241d1149",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DecreaseLayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}