{
    "name": "MouseControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "e89ddf8d-9dfe-437c-b2e0-f76f27d92947",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "ff972867-9343-4718-85ff-ad6c729919ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1c29588d-633e-4dc8-a85c-450b59d8a4ff",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}