{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "fb627595-db4f-452f-bb6a-afbf22c900bd",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "9990a93d-c0ff-4f01-a133-11efddfc0dbe",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "46827192-3103-47eb-81f0-1565ef509ee3",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}